--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 emacs/.emacs.d/backups/*
+emacs/.emacs.d/.smex-items
+emacs/.emacs.d/ac-comphist.dat
+emacs/.emacs.d/eshell/*
+emacs/.emacs.d/places
+emacs/*.elc
